--- a/examples/react-example/package.json
+++ b/examples/react-example/package.json
@@ -1,11 +1,13 @@
 {
   "name": "react-example",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
+    "@little-org/penknife": "0.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
