--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "cross-env": "^5.2.0",
+    "danger": "^6.1.4",
     "eslint": "^5.4.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
