--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-react": "^7.11.1",
     "glob": "^7.1.1",
     "jest": "^23.5.0",
+    "lodash": "^4.17.11",
     "prettier": "^1.14.2",
     "rimraf": "^2.6.2",
     "rollup": "^0.64.1",
