--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@little-org/penknife",
-  "version": "0.0.2",
+  "name": "@onluiz/penknife",
+  "version": "0.0.0",
   "description": "Little lib with utils functions for Javascript",
   "license": "MIT",
   "homepage": "http://onluiz.github.io/penknife-js",
@@ -109,5 +109,5 @@
     "lib": "lib",
     "test": "test"
   },
-  "author": "little-org"
+  "author": "onluiz"
 }
