--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -47,6 +47,7 @@
     "build:umd:min": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -o dist/penknife.min.js",
     "build": "npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
     "prepare": "npm run clean && npm run lint && npm test && npm run build",
+    "prepare:ci": "npm ci && npm run prepare",
     "examples:lint": "eslint examples",
     "examples:test": "cross-env CI=true babel-node examples/testAll.js"
   },
