--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "root",
-  "private": false,
+  "private": true,
   "devDependencies": {
     "lerna": "3.4.3",
     "danger": "^6.1.4",
