--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,6 +35,7 @@
   ],
   "scripts": {
     "clean": "rimraf lib dist es coverage",
+    "flow": "flow",
     "format": "prettier --write \"{src,test}/**/*.js\"",
     "format:check": "prettier --list-different \"{src,test}/**/*.js\"",
     "lint": "eslint src test",
@@ -46,7 +47,7 @@
     "build:umd": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -o dist/penknife.js",
     "build:umd:min": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -o dist/penknife.min.js",
     "build": "npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
-    "prepare": "npm run clean && npm run lint && npm test && npm run build",
+    "prepare": "npm run clean && npm run lint && npm run flow && npm test && npm run build",
     "prepare:ci": "npm ci && npm run prepare",
     "examples:lint": "eslint examples",
     "examples:test": "cross-env CI=true babel-node examples/testAll.js"
@@ -63,6 +64,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.26.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.4.0",
@@ -71,6 +73,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "flow-bin": "^0.87.0",
     "glob": "^7.1.1",
     "jest": "^23.5.0",
     "prettier": "^1.14.2",
